# restful-booker-api-test-python

./: .gitignore  config.py  pyproject.toml  pytest.ini
src/api/: auth_api.py  booking_api.py  ping_api.py
src/base/: base_api.py  base_request.py  base_response.py
src/models/booking/: booking.py  booking_dates.py  booking_errors_response.py  booking_ids_response.py  booking_root_response.py  create_booking_request.py  create_booking_response.py  get_booking_not_found_response.py
src/models/create_token/: create_token_request.py  create_token_response.py
src/models/health_check/: health_check_response.py
src/utils/: faker_generate.py  object_utils.py  request_logger.py
tests/: conftest.py
tests/auth/: test_auth.py
tests/booking/: test_create_booking.py  test_delete_booking.py  test_get_booking.py  test_get_booking_invalid.py  test_partial_update_booking.py  test_update_booking.py
tests/ping/: test_ping.py
